fix window scrollbar order

--- a/src/features/common/Window/window.module.css
+++ b/src/features/common/Window/window.module.css
@@ -5,10 +5,10 @@
   height: 100%;
   box-sizing: border-box;
 }
-.window.bordered .window-layout{
+.window.bordered .window-layout {
   border: 1px solid var(--dark-2);
 }
-.window.darkened .window-layout{
+.window.darkened .window-layout {
   background-color: var(--dark-2);
 }
 .window-layout {
@@ -17,6 +17,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow-y: scroll;
 }
 .window-toolbar {
   display: flex;
@@ -24,5 +25,6 @@
   height: var(--c4);
   justify-content: flex-end;
   padding-bottom: var(--c1);
-  gap: var(--extraSmall)
+  gap: var(--extraSmall);
 }
+
